--- a/book.html
+++ b/book.html
@@ -61,7 +61,7 @@ code > span.er { color: #ff0000; font-weight: bold; }
 <img src="static/pic131.PNG" alt="Рисунок 1.3 - Пример использования символа данных" /><p class="caption">Рисунок 1.3 - Пример использования символа данных</p>
 </div>
 <p>Данный элемент применяется для указания выполнения операции как ввода данных пользователем, так и чтения данных из внешнего источника. Кроме того, символ позволяет отразить процесс вывода информации на носитель любой природы (экран, ВЗУ и т.д.). При этом природа обрабатываемых данных (числовая, текстовая, графическая и т.д. информация) не имеет значения.</p>
-<p>﻿### 1.4 Комментарии {#part1-4}</p>
+<h3 id="part1-4">1.4 Комментарии</h3>
 <p>Зачастую размер символа блок-схема не позволяет отразить некоторые нюансы алгоритмы. В связи с этим особо важные с содержательной точки зрения элементы могут быть сопровождены комментариями. Дополнительная информация изображается на схеме в соответствии с представленным на рисунке 1.4 способом.</p>
 <div class="figure">
 <img src="static/pic141.PNG" alt="Рисунок 1.4 - Пример использования комментария" /><p class="caption">Рисунок 1.4 - Пример использования комментария</p>
@@ -71,7 +71,7 @@ code > span.er { color: #ff0000; font-weight: bold; }
 <div class="figure">
 <img src="static/pic142.PNG" alt="Рисунок 1.5 - Пример использования комментария группы символов" /><p class="caption">Рисунок 1.5 - Пример использования комментария группы символов</p>
 </div>
-<p>﻿### 1.5 Общие рекомендации по оформлению блок-схем {#part1-5}</p>
+<h3 id="part1-5">1.5 Общие рекомендации по оформлению блок-схем</h3>
 <p>При оформлении блок-схем рекомендуется придерживаться следующих правил.</p>
 <ul>
 <li>Несмотря на то, что ГОСТ не накладывает ограничений на содержимое символов, рекомендуется описывать команды на языке, близком к естественному. Так, действие по выводу значения переменной на экран может быть записано как &quot;writeln(X)&quot; или &quot;Вывести X&quot;. Второй вариант является более предпочтительным. Данная рекомендация связана с тем, что описание команд на языке, близком к конкретному zязыку программирования (ЯП) чревато путаницей: языки программирования имеют разную популярность и распространенность, зависящую от огромного числа факторов. Например, команда &lt;&gt; для подавляющего большинства неспециалистов в этом ЯП может оказаться незнакомой. Блок-схема - по своему назначению прежде всего универсальная структура, поэтому следует избегать ее связывания с конкретным ЯП.</li>
@@ -111,7 +111,7 @@ code > span.er { color: #ff0000; font-weight: bold; }
 <li>символы решения (один вход и несколько выходов).</li>
 </ul></li>
 </ul>
-<p>﻿### 1.6 Пример блок-схемы линейной программы {#part1-6}</p>
+<h3 id="part1-6">1.6 Пример блок-схемы линейной программы</h3>
 <p>По структуре алгоритмы разделяют на линейные, разветвляющиеся и циклические.</p>
 <p>Линейными называют алгоритмы, в которых операции выполняются последовательно одна за другой, в естественном и единственном порядке следования.. Как правило, алгоритмы линейной структуры состоят из трех частей: ввод исходных данных, вычисления результатов по формулам, вывод значений результатов. Это самые простые алгоритмы, которые являются составной частью любого алгоритммического процесса.</p>
 <p>Пусть требуется реализовать программу для подсчета суммы, разности и произведения двух заданных чисел.</p>
@@ -158,7 +158,7 @@ code > span.er { color: #ff0000; font-weight: bold; }
 <li>Найдите середину отрезка, заданного координатами своих концов.</li>
 <li>Найдите координаты точки пересечения двух прямых.</li>
 </ol>
-<p>﻿## 2 Изображение блок-схемы с ветвлениями {#part2}</p>
+<h2 id="part2">2 Изображение блок-схемы с ветвлениями</h2>
 <p>В данном разделе рассматриваются вопросы, связанные с оформлением ветвящихся процессов и циклических конструкций.</p>
 <h3 id="part2-1">2.1 Условный оператор</h3>
 <p>Подавляющее большинство алгоритмов имеет структуру, отличную от линейной. На практике часто возникает необходимость проведения анализа исходных данных или промежуточных результатов вычислений с целью определения дальнейшего порядка выполнения вычислительного процесса. Алгоритмы, в которых в зависимости от выполнения некоторого логического условия происходит разветвление вычислений по одному из нескольких возможных направлений, называют разветвляющимися. Подобные алгоритмы предусматривают выбор одного из альтернативных путей продолжения вычислений. Каждое возможное направление вычислений называется ветвью. Логическое условие называют простым, если разветвляющийся процесс имеет две ветви, и сложным, если процесс разветвляется на три и более ветви. Для выбора дальнейшей цепочки операций предназначен символ решения. Пример изображения данного элемента представлен на рисунке 2.1.</p>
@@ -178,18 +178,18 @@ code > span.er { color: #ff0000; font-weight: bold; }
 <img src="static/pic212.PNG" alt="Рисунок 2.2 - Пример изображения символа решения с группой выходов" /><p class="caption">Рисунок 2.2 - Пример изображения символа решения с группой выходов</p>
 </div>
 <p>Следует обратить внимание, на тот факт, что при наличии ровно двух альтернатив рекомендуется в целях внесения большей ясности избегать варианта оформления с единственным разделяющимся выходом.</p>
-<p>﻿ ### 2.2 Организация циклических процессов {#part2-2}</p>
-<p>Часто при решении задач приходится многократно вычислять значения по одним и тем же математическим зависимостям для различных значений входящих в них величин. Такие многократно повторяемые участки вычислительного процесса называются алгоритмами циклической структуры, или циклами. Использование циклов позволяет существенно сократить объем схемы алгоритма и длину соответствующей ей программы. Группы повторяющихся вычислений называют тело цикла. Специально изменяемый по заданному закону параметр, входящий в тело цикла, называется переменной цикла. Переменная цикла используется для подготовки очередного повторения цикла и отслеживания условий его окончания.</p>
-<p>В качестве переменной цикла используют любые переменные, индексы массивов, аргументы вычисляемых функций и тому подобные величины цикла.</p>
-<p>Для организации цикла необходимо:</p>
+<h3 id="part2-2">2.2 Организация циклических процессов</h3>
+<p>Часто при решении задач приходится многократно выполнять одни и теже операции для различных значений входящих величин. Такие многократно повторяемые участки вычислительного процесса называются алгоритмами циклической структуры, или циклами. Использование циклов позволяет существенно сократить объем схемы алгоритма и длину соответствующей ей программы. Группы повторяющихся вычислений называют тело цикла. Специально изменяемый по заданному закону параметр, входящий в тело цикла, называется переменной цикла. Переменная цикла используется для подготовки очередного повторения цикла и отслеживания условий его окончания.</p>
+<p>В качестве переменной цикла используют любые переменные, индексы массивов, аргументы вычисляемых функций и т.д.</p>
+<p>Для правильной организации цикла необходимо:</p>
 <ul>
 <li>задать перед циклом начальное значение переменной, изменяющейс в цикле;</li>
-<li>выполнять тело цикла;</li>
-<li>изменять переменную перед каждым новым повторением цикла;</li>
-<li>проверять условие окончания или повторения цикла.</li>
+<li>выполнить тело цикла;</li>
+<li>изменить переменную перед каждым новым повторением цикла;</li>
+<li>проверить условие окончания или повторения цикла.</li>
 </ul>
 <p>Циклические алгортмы, в которых число повторений заранее известно из исходных данных или определено в ходе решения задачи, называют детерминированными, если число повторений тела цикла заранее неизвестно, а зависит от значений параметров, участвующих в вычислениях цикл называют итерационным.</p>
-<p>Для отображения циклических процессов используется символ, состоящий из двух частей, определяющий начало и конец цикла (рисунок 2.3). Обе части символа имеют один и тот же идентификатор. Условия для инициализации, приращения, завершения и т. д. помещаются внутри символа в начале или в конце. В зависимости отрасположения операцир проверки условия циклы могут быть организованы как циклы с предусловием или с постусловием.</p>
+<p>Для отображения циклических процессов используется символ, состоящий из двух частей, определяющий начало и конец цикла (рисунок 2.3). Обе части символа имеют один и тот же идентификатор. Условия для инициализации, завершения могут помещаться внутри символа в начале или в конце. В зависимости от расположения операции проверки условия циклы могут быть организованы как циклы с предусловием или с постусловием.</p>
 <div class="figure">
 <img src="static/pic221.PNG" alt="Рисунок 2.3 - Пример изображения символа цикла" /><p class="caption">Рисунок 2.3 - Пример изображения символа цикла</p>
 </div>
@@ -199,11 +199,12 @@ code > span.er { color: #ff0000; font-weight: bold; }
 <img src="static/pic222.PNG" alt="Рисунок 2.4 - Пример изображения цикла с предусловием" /><p class="caption">Рисунок 2.4 - Пример изображения цикла с предусловием</p>
 </div>
 <h4 id="part2-2-2">2.2.2 Циклы с постусловием</h4>
-<p>в цикле с постусловием - выполняются как минимум один раз (даже если начальное значение параметра цикла удовлетворяет условию выхода из него).</p>
+<p>В цикле с постусловием - выполняются как минимум один раз (даже если начальное значение параметра цикла удовлетворяет условию выхода из него).</p>
 <div class="figure">
-<img src="static/pic223.PNG" alt="Рисунок 2.5 - Пример изображения цикла с предусловием" /><p class="caption">Рисунок 2.5 - Пример изображения цикла с предусловием</p>
+<img src="static/pic223.PNG" alt="Рисунок 2.5 - Пример изображения цикла с постусловием" /><p class="caption">Рисунок 2.5 - Пример изображения цикла с постусловием</p>
 </div>
-<p>﻿### 2.3 Примеры блок-схем с ветвлениями {#part2-3}</p>
+<p>Операция по модификации переменой цикла может быть определена как в теле цикла, так и всимволе конца. Недопустима модификация переменной цикла в символе начала цикала.</p>
+<h3 id="part2-3">2.3 Примеры блок-схем с ветвлениями</h3>
 <p>Пусть требуется реализовать программу для определения знака заданного числа.</p>
 <p>Блок-схема алгоритма для решения предлагаемой задачи представлена на рисунке 2.X.</p>
 <div class="figure">
