Fix many bugs in pictures

--- a/book.html
+++ b/book.html
@@ -113,7 +113,7 @@ code > span.er { color: #ff0000; font-weight: bold; }
 </ul>
 <h3 id="part1-6">1.6 Пример блок-схемы линейной программы</h3>
 <p>По структуре алгоритмы разделяют на линейные, разветвляющиеся и циклические.</p>
-<p>Линейными называют алгоритмы, в которых операции выполняются последовательно одна за другой, в естественном и единственном порядке следования.. Как правило, алгоритмы линейной структуры состоят из трех частей: ввод исходных данных, вычисления результатов по формулам, вывод значений результатов. Это самые простые алгоритмы, которые являются составной частью любого алгоритммического процесса.</p>
+<p>Линейными называют алгоритмы, в которых операции выполняются последовательно одна за другой, в естественном и единственном порядке следования.. Как правило, алгоритмы линейной структуры состоят из трех частей: ввод исходных данных, вычисления результатов по формулам, вывод значений результатов. Это самые простые алгоритмы, которые являются составной частью любого алгоритмического процесса.</p>
 <p>Пусть требуется реализовать программу для подсчета суммы, разности и произведения двух заданных чисел.</p>
 <p>Блок-схема алгоритма решения предлагаемой задачи изображена на рисунке 1.8.</p>
 <div class="figure">
